desenv_tests/test-assets/field/failure/default_value_wrong_usage_2.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(default(value(value = "value")))]
    field: String
}

fn main(){}